# Optix

./: .gitignore  CMakeLists.txt  LICENSE  Optix_Research_Documentation.docx  README.md  check_opencv.py  check_students.py  run_vcpkg.py
Attendance List/: CPE_CLASS_LIST.xlsx  parse_excel.py
scratch/: clean_all_data.py  delete_db.py  embed_students.py  extract_all_83.py  inspect_xlsx.py  parse_list.py  reset_db.py  run_parser.py  update_official_roster.py
src/: CMakeLists.txt  Main.cpp
src/Application/: AppContext.hpp  MainWindow.cpp  MainWindow.hpp
src/Core/: MockBackend.hpp  Styles.hpp  ThemeManager.cpp  ThemeManager.hpp
src/FaceRecognition/: IFaceRecognizer.hpp  LBPHFaceRecognizer.cpp  LBPHFaceRecognizer.hpp
src/Repositories/: AttendanceRepository.cpp  AttendanceRepository.hpp  Database.cpp  Database.hpp  IAttendanceRepository.hpp  IDatabase.hpp  IStudentRepository.hpp  IUserRepository.hpp  StudentRepository.cpp  StudentRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/Services/: AuthService.cpp  AuthService.hpp  CameraWorker.cpp  CameraWorker.hpp  FaceService.cpp  FaceService.hpp  StudentService.cpp  StudentService.hpp
src/UI/Common/: Sidebar.cpp  Sidebar.hpp
src/UI/Views/: AttendanceView.cpp  AttendanceView.hpp  DashboardView.cpp  DashboardView.hpp  FaceRegistrationView.cpp  FaceRegistrationView.hpp  LoginView.cpp  LoginView.hpp  OnboardingView.cpp  OnboardingView.hpp  ReportsView.cpp  ReportsView.hpp  SettingsView.cpp  SettingsView.hpp  StudentManagementView.cpp  StudentManagementView.hpp
src/Utilities/: Crypto.cpp  Crypto.hpp
